<resources>
    <string name="app_name">3Now</string>
    <string name="google_map_api">AIzaSyD0gzQ43R7S8iiJLL-oUjesnc6hu-EvCII</string>
    <string name="facebook_app_id">3127828963956256</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">734b50c746a9e545f9c6d307a1cc49c9</string>
    <string name="we_will_send_you_a_one_time_sms_message_carrier_rate_may_apply">Wir senden Ihnen möglicherweise eine \n einmalige SMS-Gebühr</string>
    <string name="navigation_drawer_open">Navigationsschublade öffnen</string>
    <string name="navigation_drawer_close">Navigationsschublade schließen</string>
    <string name="action_settings">die Einstellungen</string>
    <string name="action_coupon">Coupon</string>
    <string name="action_wallet">Brieftasche</string>
    <string name="action_logout">Ausloggen</string>
    <string name="action_track">Auf Reisen</string>
    <string name="no_running_Trip">Nein auf Reisen</string>
    <string name="version">v %s</string>
    <string name="sample_mail_id">name @ examplecom</string>
    <string name="email">Email</string>
    <string name="phone_number">Telefonnummer</string>
    <string name="first_name">Vorname</string>
    <string name="password_txt">******</string>
    <string name="recover_password">Geben Sie Ihre E-Mail-ID zur Wiederherstellung ein</string>
    <string name="enter_the_coupon">Geben Sie den Gutscheincode ein</string>
    <string name="add_coupon">GUTSCHEIN HINZUFÜGEN</string>
    <string name="update_success">Profil aktualisiert</string>
    <string name="where_to_go">Wohin?</string>
    <string name="selected_payment_mode">Kasse</string>
    <string name="change">Veränderung</string>
    <string name="schedule">Planen Sie eine Fahrt</string>
    <string name="sample_date">Wählen Sie ein Datum</string>
    <string name="sample_time">Wähle eine Zeit</string>
    <string name="next">Nächster</string>
    <string name="different_time">Sie können keine früheren Zeiten einplanen, bitte wählen Sie eine andere Zeit</string>
    <string name="choose_date_time">Bitte wählen Sie Datum und Uhrzeit für den Zeitplan</string>
    <string name="no_service">Keine Dienste gefunden</string>
    <string name="done">Erledigt</string>
    <string name="looking_for_ride">Fahrer finden</string>
    <string name="cancel_ride">Fahrt abbrechen</string>
    <string name="share">Teilen</string>
    <string name="cancel_ride_alert">Möchten Sie die Fahrt wirklich absagen?</string>
    <string name="no_drivers_found">Keine Fahrer für Ihre Reise verfügbar</string>
    <string name="driver_busy">Ihre Reise wurde vom Fahrer abgesagt. Bitte kontaktieren Sie uns für Unterstützung</string>
    <string name="my_reason_is_not_listed">Mein Grund ist nicht aufgeführt</string>
    <string name="booked_another_cab">Ich buchte ein anderes Taxi</string>
    <string name="plan_changed">Plan geändert</string>
    <string name="please_select_reason">Bitte wählen Sie den Grund</string>
    <string name="please_specify_reason">Bitte geben Sie den Grund an</string>
    <string name="driver_is_not_moving">Fahrer bewegt sich nicht</string>
    <string name="driver_denied_to_come">Fahrer verweigert zu kommen</string>
    <string name="sample_name">Will Smith</string>
    <string name="sample_service">BMW</string>
    <string name="call_btn">Anruf</string>
    <string name="cancel_trip">Fahrt abbrechen</string>
    <string name="surge_pricing">Aufgrund der Stoßzeiten variieren die Gebühren je nach Verfügbarkeit der Anbieter</string>
    <string name="payment">Zahlung</string>
    <string name="payment_methods">Zahlungsmethoden</string>
    <string name="add_payments">Karte für Zahlungen hinzufügen</string>
    <string name="add">Karte hinzufügen</string>
    <string name="enter_card_details">Kartendaten nicht gültig</string>
    <string name="are_you_sure">Sind Sie sich sicher, dass Sie das entfernen wollen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="arrived">Der Fahrer ist an Ihrem Standort angekommen</string>
    <string name="picked_up">Du bist auf Fahrt</string>
    <string name="history">Geschichte</string>
    <string name="comments">Bemerkungen</string>
    <string name="no_trips">Sie haben keine vergangenen Reisen</string>
    <string name="your_trips">Deine Reisen</string>
    <string name="upcoming">Bevorstehende</string>
    <string name="past">Vergangenheit</string>
    <string name="invoice">Rechnung</string>
    <string name="base_price">Basis tun</string>
    <string name="booking_id">Buchungs-ID</string>
    <string name="sample_base_price">10000 US-Dollar</string>
    <string name="extra_price">Extra</string>
    <string name="tax">MwSt</string>
    <string name="total">Gesamt</string>
    <string name="pay_now">Zahlen Sie jetzt</string>
    <string name="distance_price">Entfernungstarif</string>
    <string name="rate_provider">Bewerten Sie Ihre Reise mit</string>
    <string name="write_your_comment">Schreiben Sie Ihren Kommentar</string>
    <string name="submit">einreichen</string>
    <string name="source_location">Ihr Standort</string>
    <string name="connect_to_network">Verbindung zum Netzwerk herstellen oder beenden</string>
    <string name="cencel_request">Möchten Sie die Fahrt wirklich absagen?</string>
    <string name="connect_to_wifi">Stellen Sie eine Verbindung zu WIFI her</string>
    <string name="something_went_wrong">Etwas ist schief gelaufen</string>
    <string name="something_went_wrong_net">Es ist ein Fehler aufgetreten. Bitte überprüfen Sie die Internetverbindung</string>
    <string name="oops_connect_your_internet">Hoppla ! Verbinden Sie Ihr Internet</string>
    <string name="server_down">Server kann nicht erreicht werden</string>
    <string name="please_try_again">Bitte versuche es erneut</string>
    <string name="email_validation">Geben Sie Ihre E-Mail-ID ein</string>
    <string name="not_valid_email">Keine gültige E-Mail-ID</string>
    <string name="password_validation">Das Passwort konnte nicht leer gelassen werden</string>
    <string name="first_name_empty">Vorname (erforderlich</string>
    <string name="True">wahr</string>
    <string name="False">falsch</string>
    <string name="not_vaild_coupon">Der Gutschein ist ungültig oder möglicherweise abgelaufen</string>
    <string name="coupon_added">Gutschein erfolgreich angewendet</string>
    <string name="add_coupon_txt">Gutschein hinzufügen</string>
    <string name="added_coupon">Gutschein wird von Ihnen angewendet</string>
    <string name="already_in_use_coupon">Gutschein bereits von Ihnen verwendet</string>
    <string name="expired_coupon">Der Gutschein ist leider abgelaufen</string>
    <string name="off">AUS</string>
    <string name="the_applied_coupon">Der angewendete Gutscheincode lautet</string>
    <string name="valid_until">Gültig bis</string>
    <string name="wallet_balance">Ihr Brieftaschenbetrag ist</string>
    <string name="change_password_title">Passwort ändern</string>
    <string name="current_password">Jetziges Passwort</string>
    <string name="new_password">Neues Kennwort</string>
    <string name="confirm_password">Bestätige neues Passwort</string>
    <string name="please_enter_current_pass">Bitte geben Sie das aktuelle Passwort ein</string>
    <string name="please_enter_new_pass">Bitte geben Sie ein neues Passwort ein</string>
    <string name="please_enter_confirm_pass">Bitte geben Sie das Bestätigungskennwort ein</string>
    <string name="different_passwords">Passwort stimmt nicht überein</string>
    <string name="commision">Servicegebühr</string>
    <string name="request_cancel">Sie haben die Anfrage storniert</string>
    <string name="hello_blank_fragment">Hallo leeres Fragment</string>
    <string name="valid_image">Kein Bild gefunden</string>
    <string name="confirm_password_validation">Die Passwörter stimmen nicht überein</string>
    <string name="note">Hinweis: Bitte geben Sie das OTP ein, das an Ihre registrierte E-Mail gesendet wurde</string>
    <string name="secrete_code">Geben Sie OTP ein</string>
    <string name="enter_mobile_no">Handynummer eingeben</string>
    <string name="logout_alert">Möchten Sie sich abmelden?</string>
    <string name="no_comments">Kein Kommentar verfügbar</string>
    <string name="pin_location">Pin-Position einstellen</string>
    <string name="emaergeny_call">Sind Sie sicher, dass Sie mit dem Notruf fortfahren möchten?</string>
    <string name="user_no_mobile">Keine Handynummer</string>
    <string name="profile">Profil</string>
    <string name="reason_to_cancel">Grund der Stornierung</string>
    <string name="surge_pricing_title">Aufgrund der hohen Nachfrage kann der Preis variieren</string>
    <string name="help">Hilfe</string>
    <string name="book_name">Buchungs-ID</string>
    <string name="password_size">Die Passwortgröße muss mindestens 6 betragen</string>
    <string name="sorry_for_inconvinent">Entschuldigen Sie die Unannehmlichkeiten. Unsere Assistenten sind gerade beschäftigt</string>
    <string name="email_exist">Diese E-Mail Adresse ist schon vergeben</string>
    <string name="first_name_no_number">Vorname akzeptiert keine Nummern</string>
    <string name="use_wallet_amount">Verwenden Sie die Brieftaschenmenge</string>
    <string name="arriving">Der Fahrer hat Ihre Anfrage angenommen.</string>
    <string name="view_invoice">Quittung anzeigen</string>
    <string name="terms_of_Service">Nutzungsbedingungen</string>
    <string name="privacy_policy_">Datenschutz-Bestimmungen</string>
    <string name="legal">Legal</string>
    <string name="about_page">Es ist eine seit langem bekannte Tatsache, dass ein Leser von abgelenkt wird         Der lesbare Inhalt einer Seite beim Betrachten ihres Layouts. Der Sinn der Verwendung von Lorem Ipsum         ist, dass es eine mehr oder weniger normale Verteilung von Buchstaben hat, im Gegensatz zu verwenden         Im Laufe der Jahre haben sich verschiedene Versionen entwickelt, manchmal aus Versehen.         manchmal absichtlich (injizierter Humor und dergleichen).</string>
    <string name="paid_driver">Sie haben an Ihren Fahrer bezahlt</string>
    <string name="i_forgot_my_password">Vergessen?</string>
    <string name="password">Passwort</string>
    <string name="welcome_text">Willkommen bei Ilyft Support</string>
    <string name="call_support">Rufen Sie den Support an</string>
    <string name="chat_support">Chat-Unterstützung</string>
    <string name="weburl">Web-URL</string>
    <string name="trip_completed">Reise abgeschlossen</string>
    <string name="change_destination">Verändere das Ziel</string>
    <string name="add_stop">Stop hinzufügen</string>
    <string name="round_trip">Hin-und Rückfahrt</string>
    <string name="enter_destination">Ziel eingeben</string>
    <string name="pickup_location">Abholadresse</string>
    <string name="destination_location">Adresse löschen</string>
    <string name="cancel">Stornieren</string>
    <string name="summary">Zusammenfassung</string>
    <string name="summary_hint">Geben Sie den Kalendertitel ein</string>
    <string name="save">speichern</string>
    <string name="icon_desc">Anwendungssymbol</string>
    <string name="edit">Kalender bearbeiten</string>
    <string name="register">Registrieren</string>
    <string name="full_name">Vollständiger Name</string>
    <string name="login">Einloggen</string>
    <string name="booking_successful">Buchung erfolgreich</string>
    <string name="your_booking_has_been_confirmed">Ihre Buchung wurde bestätigt.</string>
    <string name="driver_will_pickup_you_in_early">Der Fahrer holt Sie frühzeitig ab</string>
    <string name="promo_code_applied">Promo-Code angewendet</string>
    <string name="rajan_owes">Rajan schuldet</string>
    <string name="complete">Komplett</string>
    <string name="january_10_12_30_pm">10. Januar - 12.30 Uhr</string>
    <string name="chhattarpur_road">Chattarpur Road</string>
    <string name="my_home">Mein Zuhause</string>
</resources>