<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerVertical="true"
        android:background="@drawable/middle_box"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="@dimen/_230sdp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"

            android:gravity="center|start"
            android:orientation="vertical">

            <com.ilyft.user.Utils.MyEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_user_name"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/full_name"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:backgroundTint="@color/transparent"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_14sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_grey_bg_"/>
            <com.ilyft.user.Utils.MyEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/transparent"
                android:drawableLeft="@drawable/ic_pasword"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_14sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_grey_bg_"/>
            <com.ilyft.user.Utils.MyEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/email"
                android:backgroundTint="@color/transparent"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_14sdp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_grey_bg_"/>
        </LinearLayout>


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="@dimen/_58sdp"
            android:layout_height="@dimen/_58sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_centerVertical="true"
            android:text="@string/next"
            android:textSize="@dimen/_9sdp"
            android:textColor="@color/white"
            android:background="@drawable/round_shape"  />


    </RelativeLayout>


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/appicon"
        android:layout_below="@+id/button2"
        android:layout_marginTop="@dimen/_8sdp"

        android:layout_centerHorizontal="true"/>

    <com.ilyft.user.Utils.MyBoldTextView
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="109dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp" />

    <LinearLayout

        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/login_views"
        android:gravity="right">

        <TextView
            android:id="@+id/txtSignIn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_21sdp" />
    </LinearLayout>


</RelativeLayout>