<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:orientation="vertical">

        <de.threenow.Utils.MyTextView
            android:id="@+id/datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="@dimen/_7sdp"
            android:text="@string/january_10_12_30_pm"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_10sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp">

                <LinearLayout
                    android:id="@+id/llLeftTop"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/llTopMiddle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="@dimen/_12sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:padding="2dp"
                        android:src="@drawable/pick_up_location" />

                    <View
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="@dimen/_60sdp"
                       android:background="@color/white" />

                    <ImageView
                        android:padding="2dp"
                        android:layout_width="@dimen/_12sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:src="@drawable/destination_icon" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/_10sdp">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">



                    <de.threenow.Utils.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/source_location"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/white"/>

                    <de.threenow.Utils.MyBoldTextView
                        android:id="@+id/txtSource"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15sdp"
                        android:textColor="@color/white"
                        android:maxLines="1"
                        android:maxLength="40"
                        android:text="@string/chhattarpur_road"/>
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <de.threenow.Utils.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/destination_location"
                            android:textSize="@dimen/_12sdp"
                            android:textColor="@color/white"/>

                        <de.threenow.Utils.MyBoldTextView
                            android:id="@+id/txtDestination"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_15sdp"
                            android:textColor="@color/white"
                            android:maxLines="1"
                            android:maxLength="40"
                            android:text="@string/my_home"/>
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
