<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/_12sdp">
    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="@dimen/_196sdp"
        android:layout_marginBottom="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:contentPadding="@dimen/_7sdp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/_5sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/gradient_vertical">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
            <TextView
                android:id="@+id/tvPaymentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:fontFamily="@font/muli_semibold"
                android:text="@string/rajan_owes"/>

            <TextView
                android:id="@+id/lblTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_32sdp"
                android:textColor="@color/white"
                android:fontFamily="@font/muli_semibold"
                android:text="$ 77.60"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tvPromo"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/muli_semibold"
                android:textColor="@color/white"
                android:text="@string/promo_code_applied"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:paddingStart="@dimen/_10sdp"
        android:id="@+id/btnPayNow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/complete"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/white"
        android:drawableStart="@drawable/right_arrow_new"
        android:fontFamily="@font/muli_semibold"/>

</LinearLayout>
